--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h2 {
     font-size: 24px;
     line-height: 152%;
     letter-spacing: 0.16em;
-    margin: 12px;
+    margin: 0;
 }
 
 .link {
@@ -86,13 +86,21 @@ h2 {
     opacity: 0.25;
 }
 
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .header-container {
     display: flex;
+    position: relative;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     height: 150px;
+    width: 600px;
 }
 
 .main-container {
@@ -120,12 +128,26 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     width: 90%;
     height: 100px;
     border: 1px dotted wheat;
     border-radius: 50px;
     background-color: aquamarine;
     opacity: 0.5;
+}
+
+:is(.round-link, .home-link) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.round-item {
+    font-size: 2em;
+    color: #181c29;
 }
 
 /* .footer-container {
