--- a/style.css
+++ b/style.css
@@ -1,35 +1,29 @@
-/* montserrat-regular - latin */
+/* pacifico-regular - cyrillic_latin */
 @font-face {
-    font-display: swap;
-    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Montserrat';
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Pacifico';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/montserrat-v29-latin-regular.woff2') format('woff2');
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
+    src: url('assets/fonts/pacifico-v22-cyrillic_latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
 
-/* montserrat-600 - latin */
+  /* pattaya-regular - cyrillic_latin */
 @font-face {
-    font-display: swap;
-    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    src: url('../fonts/montserrat-v29-latin-600.woff2') format('woff2');
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-
-/* allura-regular - latin */
-@font-face {
-    font-display: swap;
-    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Allura';
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Pattaya';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/allura-v21-latin-regular.woff2') format('woff2');
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
+    src: url('assets/fonts/pattaya-v16-cyrillic_latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+
+  /* bellota-700 - cyrillic_latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Bellota';
+    font-style: normal;
+    font-weight: 700;
+    src: url('assets/fonts/bellota-v16-cyrillic_latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
 
 html {
     box-sizing: border-box;
@@ -50,20 +44,23 @@ body {
     /* display: flex;
     flex-direction: column;
     justify-content: space-between; */
-    font: 600 12px "Montserrat";
+    font-family: "Pacifico";
     text-transform: uppercase;
     background-color: #ff4646;
     color: aliceblue;
 }
 
 h1 {
-    font-size: 36px;
+    font-family: "Pattaya";
+    font-size: 4rem;
+    line-height: 120%;
+    letter-spacing: 0.2em;
     color: #fff;
     margin: 0;
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 20px;
     line-height: 152%;
     letter-spacing: 0.16em;
     margin: 0;
@@ -72,6 +69,10 @@ h2 {
 .link {
     text-decoration: none;
     color: #181c29;
+}
+
+button:hover, button:active {
+    cursor: pointer;
 }
 
 .background {
@@ -100,7 +101,8 @@ h2 {
     align-items: center;
     justify-content: center;
     height: 150px;
-    width: 600px;
+    width: 100%;
+    padding: 20px 0 15px;
 }
 
 .main-container {
@@ -114,7 +116,7 @@ h2 {
     grid-template-columns: 1fr 2fr 1fr;
     gap: 12px;
     width: 100%;
-    border: 1px solid black;
+    border: 1px solid white;
 }
 
 .round-section {
@@ -122,6 +124,81 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.team-section {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 0;    
+    font: 400 25px "Bellota";
+}
+
+.team-name-container {
+    display: flex;
+    width: 80%;
+    padding: 0;
+    margin: 30px 0 0;
+    justify-content: center;
+}
+.textarea {
+    display: block;    
+    overflow: hidden;
+    resize: none;
+    text-align: center;
+    max-width: 230px; /*refactor later*/
+    min-height: 50px;
+    max-height: 200px;
+    box-shadow: none;
+    outline: none;
+    border: none;
+  }
+
+  .textarea[contenteditable]:empty::before {
+    content: "enter team name";
+  }
+
+  .team-1 {
+    color: aquamarine;
+}
+.points-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.team-points {
+    width: 100%; /*refactor пятисимвольные строки расширают контейнер*/
+    text-align: center;
+    font-size: 3em;
+    padding: 0;
+    margin: 0;
+}
+
+.counter-button {
+    width: 40px;
+    height: 40px;
+    border: none;
+    padding: 0;
+    background-size: cover;
+    background-position: center;
+    background-color: transparent;
+}
+
+.counter-button:hover {
+    scale: 1.2;
+}
+
+.button-minus {
+    margin-right: 5px;
+    background-image: url(assets/img/minus-white.svg);
+}
+
+.button-plus {
+    background-image: url(assets/img/plus-white.svg);   
 }
 
 .game {
