--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ button:active {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    height: 150px;
+    height: 200px;
     width: 100%;
     padding: 20px 0 15px;
 }
@@ -112,7 +112,7 @@ button:active {
 .main-container {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    height: calc(100vh - 150px);
+    height: calc(100vh - 200px);
 }
 
 .section-container {
@@ -134,11 +134,11 @@ button:active {
 
 .team-section {
     display: flex;
-    flex-direction: column;
+    flex-direction: column;    
     flex-wrap: wrap;
     align-items: center;
     gap: 0;    
-    font: 400 30px "Bellota";
+    font: 400 30px "Pattaya";
 }
 
 .team-name-container {
