feat: add hover effect on the round items

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ button:active {
     justify-content: center;
     height: 200px;
     width: 100%;
-    padding: 20px 0 15px;
+    padding: 20px 0 10;
 }
 
 .main-container {
@@ -129,7 +129,7 @@ button:active {
     align-items: center;
     justify-content: space-around;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 }
 
 .team-section {
@@ -147,6 +147,7 @@ button:active {
     padding: 0;
     margin: 30px 0 0;
     justify-content: center;
+    color: aquamarine;
 }
 .textarea {
     display: block;    
@@ -166,13 +167,14 @@ button:active {
     content: "enter team name";
   }
 
-  .team-1 {
-    color: aquamarine;
-}
+  /* .team-1 {
+      color: #36E364;
+  }
 
-.team-2 {
-    color: black;
-}
+  .team-2 {
+      color: #36E3C6;
+  } */
+
 .points-container {
     display: flex;
     flex-wrap: wrap;
@@ -217,10 +219,18 @@ button:active {
     position: relative;
     width: 90%;
     height: 100px;
-    border: 1px dotted wheat;
+    font-size: 2em;
     border-radius: 50px;
-    background-color: aquamarine;
-    opacity: 0.5;
+    background-color: #7fffd4; 
+    /* background-color:#73E77C; */
+    opacity: 0.55;
+    color: #372037;
+}
+
+.game:hover {
+    border-radius: 50px;
+    background-color: #458A73;
+    color: white;
 }
 
 :is(.round-link, .home-link) {
@@ -231,10 +241,13 @@ button:active {
     height: 100%;
 }
 
-.round-item {
-    font-size: 2em;
-    color: #181c29;
-}
+/* .round-link:hover, .round-link:active, .round-link:visited {
+    border-radius: 50px;
+    background-color: #458A73;
+    color: white;
+} */
+
+
 
 /* .footer-container {
     display: flex;
