--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ button:active {
     padding: 0;
     margin: 30px 0 0;
     justify-content: center;
-    color: aquamarine;
+    color: #7fffd4;
 }
 .textarea {
     display: block;    
@@ -247,14 +247,94 @@ button:active {
     color: white;
 } */
 
+/* round-1 page */
 
-
-/* .footer-container {
+.quiz-container {
     display: flex;
-    height: 400px;
-    background-image: url(assets/img/v1.png);
-    background-repeat: no-repeat;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    gap:5px;
+    height: calc(100vh - 200px);
+}
+
+.quiz-window {
+    display: flex;
+    width: 60%;
+    height: 80%;
+    justify-content: space-evenly;
+    align-items: center;
+    /* background-color: #d3d8e9; */
+}
+
+.slider-button {
+    width: 50px;
+    height: 50px;
+    border: none;
+    padding: 0;
+    margin: 0 5px;
     background-size: cover;
-    background-position: 0 45%;
-    opacity: 0.25;
-} */
+    background-position: center;
+    background-color: transparent;
+}
+
+.slider-button:hover {
+    scale: 1.2;    
+}
+
+.prev {    
+    background-image: url(assets/img/arrow.png);
+
+}
+
+.next {
+    transform: rotate(180deg);    
+    background-image: url(assets/img/arrow.png);
+}
+
+.timer {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #fff;
+    color: #b9bdca;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.question-container {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 90%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    background-color: #191963;
+}
+
+.question-item {
+    width:100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.question-item:nth-child(1) {
+    display:block;
+}
+
+.question-item:nth-child(2) {
+    display:none;
+}
+
+.slide {    
+    width: 100%;
+    height: 100%;
+    /* display: none; */
+}
+
+.question-1 {
+    
+}
