--- a/style.css
+++ b/style.css
@@ -1,29 +1,35 @@
 /* pacifico-regular - cyrillic_latin */
 @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Pacifico';
     font-style: normal;
     font-weight: 400;
-    src: url('assets/fonts/pacifico-v22-cyrillic_latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
+    src: url('assets/fonts/pacifico-v22-cyrillic_latin-regular.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 
-  /* pattaya-regular - cyrillic_latin */
+/* pattaya-regular - cyrillic_latin */
 @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Pattaya';
     font-style: normal;
     font-weight: 400;
-    src: url('assets/fonts/pattaya-v16-cyrillic_latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
+    src: url('assets/fonts/pattaya-v16-cyrillic_latin-regular.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 
-  /* bellota-700 - cyrillic_latin */
+/* bellota-700 - cyrillic_latin */
 @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Bellota';
     font-style: normal;
     font-weight: 700;
-    src: url('assets/fonts/bellota-v16-cyrillic_latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
+    src: url('assets/fonts/bellota-v16-cyrillic_latin-700.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 
 html {
     box-sizing: border-box;
@@ -47,7 +53,7 @@ body {
     font-family: "Pacifico";
     text-transform: uppercase;
     background-color: #ff4646;
-    color: aliceblue;    
+    color: aliceblue;
     cursor: url('assets/img/ball-pointer_cropped.png'), auto;
 }
 
@@ -78,6 +84,19 @@ button:hover,
 button:active {
     cursor: url('assets/img/ball-pointer_cropped.png'), pointer;
 }
+
+/**Hide Arrows From Input Number***/
+
+input[type='number'] {
+    -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+/**********************************/
 
 .background {
     position: absolute;
@@ -134,10 +153,10 @@ button:active {
 
 .team-section {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    gap: 0;    
+    gap: 0;
     font: 400 30px "Pattaya";
 }
 
@@ -149,25 +168,27 @@ button:active {
     justify-content: center;
     color: #7fffd4;
 }
+
 .textarea {
-    display: block;    
+    display: block;
     overflow: hidden;
     resize: none;
     text-align: center;
     align-items: center;
-    max-width: 230px; /*refactor*/
+    max-width: 230px;
+    /*refactor*/
     min-height: 100px;
     max-height: 200px;
     box-shadow: none;
     outline: none;
     border: none;
-  }
+}
 
-  .textarea[contenteditable]:empty::before {
+.textarea[contenteditable]:empty::before {
     content: "enter team name";
-  }
+}
 
-  /* .team-1 {
+/* .team-1 {
       color: #36E364;
   }
 
@@ -182,7 +203,8 @@ button:active {
 }
 
 .team-points {
-    width: 100%; /*refactor пятисимвольные строки расширают контейнер*/
+    width: 100%;
+    /*refactor пятисимвольные строки расширают контейнер*/
     text-align: center;
     font-size: 3em;
     padding: 0;
@@ -209,7 +231,7 @@ button:active {
 }
 
 .button-plus {
-    background-image: url(assets/img/plus-white.svg);   
+    background-image: url(assets/img/plus-white.svg);
 }
 
 .game {
@@ -221,7 +243,7 @@ button:active {
     height: 100px;
     font-size: 2em;
     border-radius: 50px;
-    background-color: #7fffd4; 
+    background-color: #7fffd4;
     /* background-color:#73E77C; */
     opacity: 0.55;
     color: #372037;
@@ -254,7 +276,7 @@ button:active {
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    gap:5px;
+    gap: 5px;
     height: calc(100vh - 200px);
 }
 
@@ -279,27 +301,16 @@ button:active {
 }
 
 .slider-button:hover {
-    scale: 1.2;    
+    scale: 1.2;
 }
 
-.prev {    
+.prev {
     background-image: url(assets/img/arrow.png);
-
 }
 
 .next {
-    transform: rotate(180deg);    
+    transform: rotate(180deg);
     background-image: url(assets/img/arrow.png);
-}
-
-.timer {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #fff;
-    color: #b9bdca;
-    text-align: center;
-    vertical-align: middle;
 }
 
 .question-container {
@@ -314,27 +325,126 @@ button:active {
     background-color: #191963;
 }
 
-.question-item {
-    width:100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.question-item:nth-child(1) {
-    display:block;
-}
-
-.question-item:nth-child(2) {
-    display:none;
-}
-
-.slide {    
+.slide {
     width: 100%;
     height: 100%;
-    /* display: none; */
+    display: none;
 }
 
-.question-1 {
-    
+.quiz-start {
+    display: block;
+}
+
+/* Timer */
+
+.timer-button-on {
+    width: 50px;
+    height: 50px;
+    border: none;
+    margin: 0;
+    padding: 0;
+    border-radius: 50%;
+    background-image: url(assets/img/stopwatch.svg);
+    background-size: cover;
+    background-position: center;
+    background-color: transparent;
+}
+
+.timer-button-on:hover {
+    scale: 1.1;
+}
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Black w/ opacity */
+}
+
+.modal-content {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    height: 300px;
+    background-color: #DF363A;
+    margin: 300px auto;
+    padding-bottom: 30px;
+    justify-content: center;
+    border: 1px solid #888;
+    border-radius: 50%;
+
+}
+
+/* The Close Button */
+.close {
+    position: absolute;
+    left: 270px;
+    bottom: 250px;
+    color: #fefefe;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+}
+
+.timer-content {
+    margin-left: 10px;
+    margin-bottom: 30px;
+}
+
+.timer-display {
+    width: 100%;
+    height: 150px;
+    font-size: 11em;
+    text-align: center;
+    margin-bottom: 40px;
+    color: #F0F8FF;
+    font-family: 'Bellota';
+    background: transparent;
+}
+
+.timer-button {
+    width: 100%;
+    color: black;
+    background-color: #F0F8FF;
+}
+
+.timer-button:hover {
+    scale: 0.9;
+}
+
+.timer-button {
+    width: 80px;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    margin: 0;
+    padding: 0;
+    font-family: 'Bellota';
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.start {
+    margin-right: 10px;
 }
